# assuan-rs

./: Cargo.toml  Makefile  cspell.config.yaml
.github/workflows/: rust.yml
assuan/: Cargo.toml
assuan-hijack/: Cargo.toml
assuan-hijack/src/: main.rs
assuan-server/: Cargo.toml
assuan-server/examples/: greeter.rs
assuan-server/src/: error_code.rs  lib.rs  line_reader.rs  percent_decode.rs  response.rs  router.rs
assuan/examples/: greeter.rs
assuan/src/: error_code.rs  lib.rs  response.rs  router.rs
dictionary/: project-words.txt
pinentry/: Cargo.toml
pinentry-tty/: Cargo.toml
pinentry-tty/examples/: do_you_want_to_proceed.rs
pinentry-tty/src/: lib.rs  main.rs  server.rs  terminal.rs
pinentry/src/: lib.rs
