[package]
name = "pinentry-tty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assuan = { path = "../assuan", optional = true }
pinentry = { path = "../pinentry", optional = true }

termion = { version = "3", optional = true }
either = "1"
zeroize = "1"

[features]
default = ["termion"]
server = ["assuan", "pinentry", "termion"]
termion = ["dep:termion"]

[[bin]]
name = "pinentry-tty"
path = "src/main.rs"
required-features = ["server", "termion"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
